Update Intro to Python text.

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 
                                 <div class="caption">
                                     <h3><strong>Intro to Python</strong></h3>
-                                    <p>One of my first online courses. A great learning experience. It has been a great journey with Python ever since I finished this course.</p>
+                                    <p>It has been a great journey with Python ever since I finished this course.</p>
 									<ul class="actions">
                                         <li><span class="button small"><a href="https://www.datacamp.com/statement-of-accomplishment/course/c4cae96cfc9d89c11b117079e0563ad44ae8b418" target="_blank">VIEW ONLINE COPY</span></a></li>
                                     </ul>
