Fix problem with image of Intro to python not showing up.

--- a/index.html
+++ b/index.html
@@ -247,8 +247,9 @@
                             </article>
 
                             <article>
-                                
-                                    <img src="images/gallery/thumbs/python.png" alt="Intro To Python - DATACAMP" />
+									<a href="images/gallery/fulls/python.png" class="image">
+									<img src="images/gallery/thumbs/python.png" alt="Intro To Python - DATACAMP" />
+									</a>
                                 
                                 <div class="caption">
                                     <h3><strong>Intro to Python</strong></h3>
