Updated buttons in portfolio section and added MATLAB OnRamp Certificate with Internship Docs.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<h3><b>Data Analytics and ML Intern at Nokia - Summer 2019</b></h3>
 										<p>Worked on <strong>spare part consumption, prediction and inventory management system.</strong></a></p>
 										<ul class="actions">
-											<li><span class="button small">Logo</span></li>
+											<li><span class="button small"><a href="https://drive.google.com/file/d/1bt5IRksdTN6M8wNn9VoBDLo7QrYCCf_w/view?usp=drivesdk" target="_blank">Internship Completion Certificate</a></span></li>
 										</ul>
 									</div>
 								</article>
@@ -109,9 +109,10 @@
                                     </a>
                                     <div class="caption">
                                         <h3><strong>LinkedIn Profile</strong></h3>
-                                        <p>This is where I post achievements and what's happening in my professional life from time to time. Feel free to add me as a connection <a href="https://www.linkedin.com/in/anmol-tomer/" target="_blank"><b>here.</b></a></p>
+                                        <p>This is where I post achievements and what's happening in my professional life from time to time. Feel free to add me as a connection.</p>
                                         <ul class="actions">
-                                            <!-- <li><span class="button small"><a href="https://www.github.com/github/AnmolTomer/" target="_blank">Visit</span></a></li> -->
+											<li><span class="button small"><a href="https://www.linkedin.com/in/anmol-tomer/" target="_blank">LinkedIn Profile</a></span></li>
+                                            
                                         </ul>
                                     </div>
                                 </article>
@@ -122,9 +123,9 @@
 									</a>
 									<div class="caption">
 										<h3><strong>Plenty Planet</strong></h3>
-										<p>Expoplanet Exploration WebApp<br><a href="https://imgur.com/a/avUtiCX" target="_blank"><b>Album</b></a></p>
+										<p>Expoplanet Exploration WebApp</p>
 										<ul class="actions">
-											<li><span class="button small">Logo</span></li>
+											<li><span class="button small"><a href="https://imgur.com/a/avUtiCX" target="_blank">Album</a></span></li>
 										</ul>
 									</div>
 								</article>
@@ -136,7 +137,7 @@
 											<h3><strong>FFCSOnTheGo</strong></h3>
 											<p>Contributor to FFCSOnTheGo GitHub repo and team lead for VIT Chennai campus, responsible for maintaining accurate courses offered data for VIT Chennai Campus.</p>
 											<ul class="actions">
-												<li><span class="button small"><a href="https://ffcsonthego.vatz88.in/#Chennai" target="_blank">Github</a></span></li>
+												<li><span class="button small"><a href="https://ffcsonthego.vatz88.in/#Chennai" target="_blank">See It Live</a></span></li>
 											</ul>
 										</div>
 									</article>
@@ -256,6 +257,18 @@
                                     <p>It has been a great journey with Python ever since I finished this course.</p>
 									<ul class="actions">
                                         <li><span class="button small"><a href="https://www.datacamp.com/statement-of-accomplishment/course/c4cae96cfc9d89c11b117079e0563ad44ae8b418" target="_blank">VIEW ONLINE COPY</span></a></li>
+                                    </ul>
+                                </div>
+							</article>
+							<article>
+                                <a href="images/matlab.png" class="image">
+                                    <img src="images/matlab.png" alt="" />
+                                </a>
+                                <div class="caption">
+									<h3><strong>MATLAB OnRamp</strong></h3>
+									<p>Learnt as a supplement to Prof. Andrew Ng's Machine Learning Couse on Coursera.</p>
+                                    <ul class="actions">
+                                        <li><span class="button small"><a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=60123cae-08e7-429a-acf6-26d7361e5c0e" target="_blank">View online copy</span></a></li>
                                     </ul>
                                 </div>
                             </article>
