--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 							<h1>Hi, I'm Anmol :) </h1>
 							<p class="major">A Data Analyst, developer and a life-long learner.</p>
 							<ul class="actions vertical">
-								<li><a href="https://drive.google.com/file/d/1o1-4HZTVccFuICQqhBJUfco1udxS21o4/view?usp=sharing" class="button big wide smooth-scroll-middle" target="_blank">Download Resume</a></li>
+								<li><a href="https://drive.google.com/file/d/1ZSmBK4bkeh0540cr6AhBiCu_4bv7JQ6v/view" class="button big wide smooth-scroll-middle" target="_blank">Download Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
