--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
 	<meta charset="UTF-8">
@@ -83,7 +83,7 @@
 		.header-right {
 			display: flex;
 			align-items: center;
-			gap: 1rem;
+			gap: 2rem;
 		}
 
 		.social-links {
@@ -110,17 +110,45 @@
 			cursor: pointer;
 			transition: all 0.3s ease;
 			font-size: 1.1rem;
+			transform: scale(1);
 		}
 
 		.theme-toggle:hover {
 			color: var(--accent);
 			border-color: var(--accent);
+			transform: scale(1.05);
+		}
+
+		.theme-toggle:active {
+			transform: scale(0.95);
 		}
 
 		/* Hero Section */
 		.hero {
 			padding: 6rem 0;
 			text-align: center;
+		}
+
+		.hero-content {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 2rem;
+		}
+
+		.profile-image {
+			width: 200px;
+			height: 200px;
+			border-radius: 50%;
+			object-fit: cover;
+			border: 4px solid var(--accent);
+			box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+			transition: transform 0.3s ease, box-shadow 0.3s ease;
+		}
+
+		.profile-image:hover {
+			transform: scale(1.05);
+			box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
 		}
 
 		.hero h1 {
@@ -215,6 +243,27 @@
 			margin-bottom: 1.5rem;
 			flex-wrap: wrap;
 			gap: 1rem;
+		}
+
+		.experience-left {
+			display: flex;
+			align-items: center;
+			gap: 1rem;
+			flex: 1;
+		}
+
+		.company-logo {
+			width: 60px;
+			height: 60px;
+			object-fit: contain;
+			border-radius: 8px;
+			background: var(--bg-primary);
+			padding: 8px;
+			border: 1px solid var(--border);
+		}
+
+		.experience-info {
+			flex: 1;
 		}
 
 		.experience-title {
@@ -538,11 +587,18 @@
 
 			.header-right {
 				flex-direction: column;
+				gap: 1rem;
 			}
 
 			.experience-header {
 				flex-direction: column;
 				align-items: flex-start;
+			}
+
+			.experience-left {
+				flex-direction: column;
+				align-items: flex-start;
+				gap: 0.5rem;
 			}
 
 			.projects-grid {
@@ -559,6 +615,11 @@
 
 			.interests-grid {
 				grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+			}
+
+			.profile-image {
+				width: 150px;
+				height: 150px;
 			}
 		}
 
@@ -621,7 +682,7 @@
 						</a>
 					</div>
 					<button class="theme-toggle" id="themeToggle" title="Toggle theme">
-						<i class="fas fa-moon"></i>
+						<i class="fas fa-sun"></i>
 					</button>
 				</div>
 			</div>
@@ -631,12 +692,17 @@
 	<!-- Hero Section -->
 	<section class="hero">
 		<div class="container">
-			<h1 class="fade-in-up">Anmol Tomer</h1>
-			<p class="subtitle fade-in-up">Backend Developer | AI Enthusiast | Aspiring Ironman</p>
-			<p class="description fade-in-up">
-				I build robust backend systems by day and train for endurance sports by night.
-				Currently exploring the world of AI while looking for collaborators on open-source projects.
-			</p>
+			<div class="hero-content">
+				<img src="images/photo_2025-06-28_23-41-00.jpg" alt="Anmol Tomer" class="profile-image fade-in-up">
+				<div>
+					<h1 class="fade-in-up">Anmol Tomer</h1>
+					<p class="subtitle fade-in-up">Backend Developer | AI Enthusiast | Aspiring Ironman</p>
+					<p class="description fade-in-up">
+						I build robust backend systems by day and train for endurance sports by night.
+						Currently exploring the world of AI while looking for collaborators on open-source projects.
+					</p>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -660,10 +726,13 @@
 			<div class="experience-grid">
 				<div class="experience-card scroll-animate">
 					<div class="experience-header">
-						<div>
-							<h3 class="experience-title">Backend Engineer</h3>
-							<p class="experience-company">CRED</p>
-							<p class="experience-role">Bengaluru, India</p>
+						<div class="experience-left">
+							<img src="images/cred_light.png" alt="CRED" class="company-logo" id="cred-logo">
+							<div class="experience-info">
+								<h3 class="experience-title">Backend Engineer</h3>
+								<p class="experience-company">CRED</p>
+								<p class="experience-role">Bengaluru, India</p>
+							</div>
 						</div>
 						<span class="experience-date">June 2022 - Present</span>
 					</div>
@@ -681,10 +750,13 @@
 
 				<div class="experience-card scroll-animate">
 					<div class="experience-header">
-						<div>
-							<h3 class="experience-title">Data Science Intern</h3>
-							<p class="experience-company">Nokia Networks and Solutions</p>
-							<p class="experience-role">Chennai, India</p>
+						<div class="experience-left">
+							<img src="images/nokia_logo.png" alt="Nokia" class="company-logo">
+							<div class="experience-info">
+								<h3 class="experience-title">Data Science Intern</h3>
+								<p class="experience-company">Nokia Networks and Solutions</p>
+								<p class="experience-role">Chennai, India</p>
+							</div>
 						</div>
 						<span class="experience-date">May 2019 - June 2019</span>
 					</div>
@@ -912,11 +984,13 @@
 		const themeToggle = document.getElementById('themeToggle');
 		const html = document.documentElement;
 		const icon = themeToggle.querySelector('i');
+		const credLogo = document.getElementById('cred-logo');
 
-		// Check for saved theme preference or default to dark
-		const currentTheme = localStorage.getItem('theme') || 'dark';
+		// Check for saved theme preference or default to light
+		const currentTheme = localStorage.getItem('theme') || 'light';
 		html.setAttribute('data-theme', currentTheme);
 		updateThemeIcon(currentTheme);
+		updateCredLogo(currentTheme);
 
 		themeToggle.addEventListener('click', () => {
 			const currentTheme = html.getAttribute('data-theme');
@@ -925,6 +999,7 @@
 			html.setAttribute('data-theme', newTheme);
 			localStorage.setItem('theme', newTheme);
 			updateThemeIcon(newTheme);
+			updateCredLogo(newTheme);
 		});
 
 		function updateThemeIcon(theme) {
@@ -934,6 +1009,16 @@
 			} else {
 				icon.className = 'fas fa-moon';
 				themeToggle.title = 'Switch to light theme';
+			}
+		}
+
+		function updateCredLogo(theme) {
+			if (credLogo) {
+				if (theme === 'light') {
+					credLogo.src = 'images/cred_light.png';
+				} else {
+					credLogo.src = 'images/cred_dark.png';
+				}
 			}
 		}
 
